# distillate

./: .env.example  .gitattributes  .gitignore  .mcp.json  ARCHITECTURE.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  TESTING.md  pyproject.toml  supabase
.claude/skills/assay/: SKILL.md
.claude/skills/brew/: SKILL.md
.claude/skills/conjure/: SKILL.md
.claude/skills/connectors/: SKILL.md
.claude/skills/deep-analysis/: SKILL.md
.claude/skills/distill/: SKILL.md
.claude/skills/forage/: SKILL.md
.claude/skills/launch-experiment/: SKILL.md
.claude/skills/literature-review/: SKILL.md
.claude/skills/scan-all/: SKILL.md
.claude/skills/signup/: SKILL.md
.claude/skills/steer/: SKILL.md
.claude/skills/survey/: SKILL.md
.claude/skills/tincture/: SKILL.md
.claude/skills/transmute/: SKILL.md
.github/workflows/: build-desktop.yml  build.yml  ci.yml  emails.yml  publish.yml
cloud-sync/functions/_shared/: resend.ts
cloud-sync/functions/send-event/: index.ts
cloud-sync/functions/send-scheduled/: index.ts
cloud-sync/functions/state-sync/: index.ts
cloud-sync/functions/sync-snapshot/: index.ts
cloud-sync/migrations/: 20260322000000_initial_schema.sql  20260323000000_enable_pg_cron.sql  20260324000000_add_queued_papers.sql
cloud/supabase/migrations/: 20260322000000_initial_schema.sql  20260322000001_scheduled_email_function.sql  20260323100000_drop_cadence.sql
desktop/: .gitignore  package-lock.json  package.json  playwright.config.js
desktop/electron/: attach-burst.js  canvas-fs.js  combined-circular-list.js  main.js  menu.js  paste-handlers.js  powermetrics-manager.js  preload.js  pty-manager.js  python-manager.js  scrollback-state.js  tectonic-manager.js  terminal-controller.js
desktop/renderer/: account.js  agents-ui.js  app.js  billing.js  browser-shim.js  calibration.js  canvas-editor.mjs  canvas.js  charts.js  chat.js  core.js  drafts-dock.js  experiment-detail.js  experiment-wizard.js  experiments.js  hw-metrics.js  index.html  integrations.js  layout.js  nicolas-ui.js  notebook-ui.js  paper-reader.js  papers.js  results.js  styles.css  transcript-overlay.js  usage-stats.js  vault-ui.js  welcome.js  workspaces.js
desktop/resources/: icon.icns
desktop/scripts/: build-dmg.sh  build-icons.sh  build-venv.sh  install.ps1  install.sh  patch-electron.sh  rebuild-native.js
desktop/test/: auth-dom.test.js  billing-display.test.js  canvas-renderer.test.js  combined-circular-list.test.js  drafts-dock.test.js  experiment-callout.test.js  experiments-activity-indicator.test.js  experiments-grouping.test.js  insights.test.js  live-metric-sparkline.test.js  no-permissions.test.js  paper-reader-dom.test.js  paper-reader.test.js  papers-search-selection.test.js  paste-handlers.test.js  powermetrics-manager.test.js  run-number-display.test.js  run-timer-state.test.js  scrollback-state.test.js  session-switch-scroll.test.js  tectonic-manager.test.js  terminal-controller.test.js  theme-colors.test.js  welcome-resume.test.js
desktop/test-e2e/: debug.spec.js  fixtures.js  paper-reader.spec.js  papers-search.spec.js
desktop/test/helpers/: canvas-harness.js
distillate/: __main__.py  agent.py  agent_core.py  agent_sdk.py  agent_templates.py  agents.py  auth.py  budget.py  chart_export.py  checkpoints.py  claude_hooks.py  cli.py  cloud_email.py  cloud_sync.py  commands.py  compute.py  compute_hfjobs.py  config.py  credential_store.py  db.py  digest.py  events.py  experiment_commands.py  experiment_tools.py  experiments.py  experiments_enrichment.py  experiments_parser.py  gemini_sdk.py  highlight_io.py  huggingface.py  lab_notebook.py  launcher.py  main.py  mcp_server.py  modal_client.py  nicolas_state.py  notebook.py  notify.py  obsidian.py  paper_commands.py  (+20 more)
distillate/agent_runtime/: __init__.py  breadcrumbs.py  knowledge_agent.py  lab_api.py  lab_repl.py  librarian.py  research_agent.py  subagent.py  usage_tracker.py
distillate/autoresearch/: BACKFILL_PROMPT.md  CLAUDE.md  PI.md  REPORTING.md  __init__.py  hooks.json
distillate/core/: __init__.py
distillate/experiment_tools/: __init__.py  _helpers.py  agent_tools.py  experiment_crud.py  hf_tools.py  init_tools.py  repl_tools.py  run_tools.py  session_tools.py  workspace_tools.py  xp_tools.py
distillate/hooks/: __init__.py  on_stop.py  post_bash.py
distillate/integrations/: __init__.py
distillate/integrations/remarkable/: __init__.py  auth.py  (+1 more)
distillate/knowledge/: __init__.py
distillate/routes/: __init__.py  _context.py  agents.py  auth.py  canvas.py  experiments.py  hf_metrics.py  hooks.py  notebook.py  papers.py  settings.py  workspaces.py
distillate/sync/: __init__.py
docs/: CNAME  canvas-spec-and-tests.md  index.html  power-users.html
docs/logo-explorations/: index.html
docs/research/: nicolas-billing-action-plan.md  resume-last-thread-plan.md  rlm-nicolas-action-plan.md
scripts/: backfill_notebook.py  install-launchd.sh  migrate_note_types.py  migrate_v2_phase2.py  migrate_v2_phase5.py  uninstall-launchd.sh
tests/: conftest.py  test_agent.py  test_agent_status_detection.py  test_agent_status_renderer.py  test_agents.py  test_auth.py  test_auth_routes.py  test_budget_helper.py  test_budget_source_of_truth.py  test_canvas.py  test_canvas_list_create.py  test_canvas_mutate_detect.py  test_canvas_session.py  test_citekey_extraction.py  test_citekey_rename.py  test_claude_hooks.py  test_cloud_sync.py  test_cloud_sync_auth.py  test_cloud_sync_delta.py  test_cloud_sync_http.py  test_cloud_sync_merge.py  test_config.py  test_drafts_dock_backend.py  test_engagement.py  test_engagement_digest.py  test_engagement_score.py  test_events.py  test_experiment_bugs.py  test_experiment_cli.py  test_experiment_metrics.py  test_experiments.py  test_experiments_hooks.py  test_experiments_ingestion.py  test_experiments_lifecycle.py  test_experiments_log_extraction.py  test_experiments_metrics.py  test_experiments_notebook.py  test_experiments_scanning.py  test_experiments_state_crud.py  test_experiments_tools.py  (+87 more)
workers/: subscribe.js  wrangler.toml
(+6 files in other folders)
