[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "distillate"
version = "0.1.7"
description = "Distill research papers from Zotero through reMarkable into structured notes"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Romain Lacombe"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "python-dotenv",
    "requests",
    "rmscene>=0.7.0",
    "pymupdf>=1.24.0",
]

[project.optional-dependencies]
ai = ["anthropic>=0.40.0"]
email = ["resend>=2.0.0"]
all = ["anthropic>=0.40.0", "resend>=2.0.0"]

[project.urls]
Homepage = "https://distillate.dev"
Repository = "https://github.com/rlacombe/distillate"
Issues = "https://github.com/rlacombe/distillate/issues"

[project.scripts]
distillate = "distillate.main:_main_wrapper"

[tool.pytest.ini_options]
testpaths = ["tests"]
