[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "distillate"
version = "0.314.0"
description = "Design, launch, and track autonomous research experiments — with a paper library built in"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Romain Lacombe"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "python-dotenv",
    "requests",
    "rmscene>=0.7.0",
    "pymupdf>=1.24.0",
    "anthropic>=0.40.0",
    "resend>=2.0.0",
    "rich>=13.0",
]

[project.optional-dependencies]
desktop = ["fastapi", "uvicorn[standard]", "websockets", "matplotlib"]

[project.urls]
Homepage = "https://distillate.dev"
Repository = "https://github.com/rlacombe/distillate"
Issues = "https://github.com/rlacombe/distillate/issues"
Changelog = "https://github.com/rlacombe/distillate/blob/main/CHANGELOG.md"

[project.scripts]
distillate = "distillate.main:_main_wrapper"

[tool.hatch.build.targets.wheel]
packages = ["distillate"]

[tool.hatch.build.targets.wheel.force-include]
"distillate/autoresearch/REPORTING.md" = "distillate/autoresearch/REPORTING.md"
"distillate/autoresearch/hooks.json" = "distillate/autoresearch/hooks.json"
"distillate/autoresearch/skills/experiment/SKILL.md" = "distillate/autoresearch/skills/experiment/SKILL.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
